--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,9 +32,19 @@ body {
 }
 
 #canvas {
+  /*
   position: relative;
   width: 100%;
   height: 100%;
+  */
+
+  position: absolute;
+  left: 200px;
+  top: 200px;
+  width: 400px;
+  height: 400px;
+  outline: 1px solid #ccc;  
+  
   z-index: 300;
 } 
 
